tenzir/tests/lexer/invalid_utf8.tql
// test: lexer
// error: true
"aÿb" + 42
